--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,7 +11,10 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
+<ul>
+<li> <a href="/view/liste"> Liste des stagiaires de DWWM2 </a> </li>
+<li> <a href="/view/liste"> Liste des stagiaires de DWWM2 </a> </li>
+</ul>
     <ul>
         <li>Your controller at <code><a href="{{ 'C:/wamp64/www/modou/Symfony/test1/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'C:/wamp64/www/modou/Symfony/test1/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
