--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,20 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Bienvenu(e) à ma page d'accueil!{% endblock %}
 
 {% block body %}
+
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-<ul>
-<li> <a href="/view/liste"> Liste des stagiaires de DWWM2 </a> </li>
-<li> <a href="/view/liste"> Liste des stagiaires de DWWM2 </a> </li>
-</ul>
+
+<div class="example-wrapper">
+    <h1> une page d'apprentissage!! ✅</h1>
+
+#{% include "menu.html.twig" %}
     <ul>
         <li>Your controller at <code><a href="{{ 'C:/wamp64/www/modou/Symfony/test1/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'C:/wamp64/www/modou/Symfony/test1/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
