--- a/templates/view/Listestagiaire.html.twig
+++ b/templates/view/Listestagiaire.html.twig
@@ -4,14 +4,14 @@
 {% block h1 %} Liste des stagiaires de DWW2 : {% endblock %}
 <br/><br/>
 <ul>
-<li> {{liste[0]}} </li>
-<li> {{liste[1]}} </li>
-<li> {{liste[2]}} </li>
-<li> {{liste[3]}} </li>
-<li> {{liste[4]}} </li>
-<li> {{liste[5]}} </li>
-<li> {{liste[6]}} </li>
-<li> {{liste[7]}} </li>
-<li> {{liste[8]}} </li>
+<li> {{liste_prenom[0]}} </li>
+<li> {{liste_prenom[1]}} </li>
+<li> {{liste_prenom[2]}} </li>
+<li> {{liste_prenom[3]}} </li>
+<li> {{liste_prenom[4]}} </li>
+<li> {{liste_prenom[5]}} </li>
+<li> {{liste_prenom[6]}} </li>
+<li> {{liste_prenom[7]}} </li>
+<li> {{liste_prenom[8]}} </li>
 </ul>
 {% endblock %}
