les conditions if

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -16,6 +16,7 @@
 <li> <a href="{{ path('index_programme') }}"> Programme </a> </li>
 <li> <a href="{{ path('view_affiche') }}"> Affichage de mon nom et prénom </a> </li>
 <li> <a href="{{ path('index_calcul') }}"> Affichage des résultat</a> </li>
+<li> <a href="{{ path('index_moyenne') }}"> les moyenne des stagiaires </a> </li>
 </ul>
 </h3>
 
