--- a/templates/biblio/connexion.html.twig
+++ b/templates/biblio/connexion.html.twig
@@ -1,3 +1,13 @@
 {% extends "base.html.twig" %}
 
 {% block title %} page de connexion!{% endblock %}
+
+{% block body %}
+<h1>
+Bienvenu(e) à la page de connexion !
+</h1>
+<hr/>
+<br/><br/>
+
+
+{% endblock %}
