--- a/templates/biblio/documentation.html.twig
+++ b/templates/biblio/documentation.html.twig
@@ -1,3 +1,12 @@
 {% extends "base.html.twig" %}
 
 {% block title %} page de documentation! {% endblock %}
+
+{% block body %}
+<h1> Vous êtes à la page de documentation! </h1>
+
+<hr/>
+<br/><br/>
+
+
+{% endblock %}
