--- a/templates/menu_user.html.twig
+++ b/templates/menu_user.html.twig
@@ -17,7 +17,7 @@
 <li> <a href="{{ path('index_documentation') }}"> Documentation </a> </li>
 <li> <a href="{{ path('index_contact') }}"> Nous contacter </a> </li>
 <li> <a href="{{ path('index_connexion') }}"> se connecter </a> </li>
-<li> <a href="{{ path('index_admin') }}"> Nous Administrer </a> </li>
+<li> <a href="{{ path('index_administrer') }}"> Mode Admin! </a> </li>
 </ul>
 </h3>
 
