--- a/templates/biblio/index.html.twig
+++ b/templates/biblio/index.html.twig
@@ -1,16 +1,34 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Bienvenu(e) à la gestion de ma bibliothèque! {% endblock %}
+{% block title %}Bienvenu(e) à la gestion de ma bibliothèque!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 800px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
+		.example-wrapper code {
+			background: #F5F5F5;
+			padding: 2px 6px;
+		}
+	</style>
 
-<div class="example-wrapper">
-    <h1> Bienvenu! ✅</h1>
+	<h1>
+		Bienvenu! ✅</h1>
 
-    {% include "menu_user.html.twig" %}
-</div>
+	<br/><br/>
+
+	<div>
+		{% include "menu_user.html.twig" %}
+	</div>
+	<hr/>
+
+	<br/><br/>
+
+
+	<div class="example-wrapper"></div>
 {% endblock %}
