persistance et affichage

--- a/templates/menu_article.html.twig
+++ b/templates/menu_article.html.twig
@@ -3,10 +3,10 @@
 {% block body %}					
 <ul class="dropdown-menu">
     <h3>
-		<li class="active"><a href="#">Accueil </a></li>
-        <li class="active"><a href="{{path('articles_index')}}">Liste des Articles </a></li>
-        <li class="active"><a href="{{path('articles_affichage')}}">Lire la suite </a></li>
-        <li class="active"><a href="#">Modifier un article </a></li>
+		#<li class="active"><a href="{{ path('biblio') }}"> Accueil </a></li>
+        <li class="active"><a href="{{path('gerarticle')}}"> Liste des Articles </a></li>
+        <li class="active"><a href="{{path('art_affichage')}}"> Lire la suite </a></li>
+        #<li class="active"><a href="#">Modifier un article </a></li>
 
 
     </h3>
