--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Gestion des articles!
+{% block title %}
+	Gestion des articles!
 {% endblock %}
 
 {% block body %}
@@ -16,39 +17,39 @@
 			padding: 2px 6px;
 		}
 	</style>
-	<div>
+
+	<div class="example-wrapper">
 		<h1>
-			Bienvenu(e) à la page de gestion des articles! ✅</h1>
-	</div>
-	<br/><br/>
-	<hr/>
-	<br/>
-	<div id="menu" class=""></div>
+			Bienvenu(e) à la page de la gestion des articles! ✅</h1>
+<br/><br/>
+<hr/>
+<br/>
+<div id="menu" class="menu">
+<ul>
 
-	<div id="contenu" class="">
+</ul>
+</div>
 		<table class="table">
-
 			<tbody>
-
-				{% for article in articles %}
+				{% for article in produit %}
 					{# https://twig.symfony.com/doc/3.x/tags/for.html #}
 					<tr>
-						<td>{{ article.id }}</td>
-						<td>{{ article.Title }}</td>
-						<td>{{ article.Contenu }}</td>
+						<td>{{ article.id }}
+						</td>
+						<td>{{ article.titre }}
+						</td>
+						<td>{{ article.contenu }}
+						</td>
 					</tr>
 				{% else %}
 					<tr>
-						<td colspan="5">no records found</td>
+						<td colspan="5">Vous n'avez pas d'enregistrement!
+						</td>
+						<td></td>
 					</tr>
-				{% endfor %}
-
+				{% endfor %}}
 			</tbody>
 		</table>
+        
 	</div>
-
-	<br/><br/>
-	<hr/>
-	<br/>
-	<div id="footer" class=""></div>
 {% endblock %}
