--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -9,6 +9,7 @@
 <h3>
 <ul>
 <li> <a href="{{ path('index_liste') }}"> Liste des stagiaires de DWWM2 </a> </li>
+<li> <a href="{{path('index_gerarticle')}}"> Liste des Articles </a></li>
 <li> <a href="{{ path('contacter') }}"> Nous contacter </a> </li>
 <li> <a href="{{ path('index_apropos') }}"> à propos </a> </li>
 <li> <a href="{{ path('index_actualite') }}"> L'actualité </a> </li>
