--- a/templates/menu_user.html.twig
+++ b/templates/menu_user.html.twig
@@ -8,15 +8,16 @@
 
 
 	<ul>
-		<li><ahref="{{path('biblio')}}">accueil</a></li>
-		<li><ahref="{{path('index_apropos')}}">à propos</a></li>
-		<li><ahref="{{path('index_livre')}}">Les livres</a></li>
-		<li><ahref="{{path('index_quoi')}}">##</a></li>
-		<li><ahref="{{path('index_quoi2')}}">##</a></li>
-		<li><ahref="{{path('index_location')}}">Les locations</a></li>
-		<li><ahref="{{path('index_documentation')}}">Documentation</a></li>
-		<li><ahref="{{path('index_contact')}}">Nous contacter</a></li>
-		<li><ahref="{{path('index_connexion')}}">se connecter</a></li>
-		<li><ahref="{{path('index_admin')}}">Mode Admin!</a></li>
+		<li> <a href="{{path('biblio')}}">accueil</a></li>
+		<li class="active"><a href="{{path('gerarticle')}}"> Liste des Articles</a></li>
+		<li><a href="{{path('index_apropos')}}">à propos</a></li>
+		<li><a href="{{path('index_livre')}}">Les livres</a></li>
+		<li><a href="{{path('index_quoi')}}">##</a></li>
+		<li><a href="{{path('index_quoi2')}}">##</a></li>
+		<li><a href="{{path('index_location')}}">Les locations</a></li>
+		<li><a href="{{path('index_documentation')}}">Documentation</a></li>
+		<li><a href="{{path('index_contact')}}">Nous contacter</a></li>
+		<li><a href="{{path('index_connexion')}}">se connecter</a></li>
+		<li><a href="{{path('index_admin')}}">Mode Admin!</a></li>
 	</ul>
 {% endblock %}
