suite de l'affichage des entity

--- a/templates/article/affichage.html.twig
+++ b/templates/article/affichage.html.twig
@@ -28,8 +28,8 @@
 <td>{{ articles.titre }}</td>
 <td>{{ articles.contenu }}</td>
 <td>{{ articles.image }}</td>
-<td>{{ articles.résumé }}</td>
-<td>{{ articles.dat|date("d/m/Y") }}</td>
+<td>{{ articles.resumé }}</td>
+<td>{{ articles.date|date("d/m/Y") }}</td>
 </tr>
 </tbody>
 </table>
