le commit de la journée

--- a/templates/article/affichage.html.twig
+++ b/templates/article/affichage.html.twig
@@ -27,7 +27,7 @@
 <td>{{ articles.id }}</td>
 <td>{{ articles.titre }}</td>
 <td>{{ articles.contenu }}</td>
-<td>{{ articles.image }}</td>
+{# <td>{{ articles.image }}</td>  #}
 <td>{{ articles.resumé }}</td>
 <td>{{ articles.date|date("d/m/Y") }}</td>
 </tr>
