--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -39,7 +39,7 @@
 						<td>{{ article.contenu }}
 						</td>
 						<td>
-							<li><a href="{{ path('art_affichage', {'id':articles.id})}}"> Lire mon action </a></li>
+							<li><a href="{{ path('art_affichage', {'id':article.id})}}"> Lire mon action </a></li>
 						</td>
 					</tr>
 				{% else %}
