nouveau commit avec le menu

--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,55 +1,18 @@
-{% extends 'base.html.twig' %}
+{% extends "base.html.twig" %}
 
-{% block title %}
-	Gestion des articles!
-{% endblock %}
+{% block title %} Bienvenu(e) au site de la bibliothèque de GUINOT {% endblock %}
 
 {% block body %}
-	<style>
-		.example-wrapper {
-			margin: 1em auto;
-			max-width: 800px;
-			width: 95%;
-			font: 18px / 1.5 sans-serif;
-		}
-		.example-wrapper code {
-			background: #F5F5F5;
-			padding: 2px 6px;
-		}
-	</style>
 
-	<div class="example-wrapper">
-		<h1>
-			Bienvenu(e) à la page de la gestion des articles! ✅</h1>
-		<br/><br/>
-		<hr/>
-		<br/>
-		<div id="menu" class="menu">
-			<ul></ul>
-		</div>
-		<table class="table" border="1">
-			<tbody>
-				{% for article in produit %}
-					{# https://twig.symfony.com/doc/3.x/tags/for.html #}
-					<tr>
-						<td>{{ article.id }}
-						</td>
-						<td>{{ article.titre }}
-						</td>
-						<td>{{ article.contenu }}
-						</td>
-						<td>
-							<li><a href="{{ path('art_affichage', {'id':article.id})}}"> Lire mon action </a></li>
-						</td>
-					</tr>
-				{% else %}
-					<tr>
-						<td colspan="5">Vous n'avez pas d'enregistrement!
-						</td>
-					</tr>
-				{% endfor %}}
-			</tbody>
-		</table>
+<div>
+<h1> Vous êtes sur le site de GUINOT! </h1>
 
-	</div>
-</div>{% endblock %}
+<br/><br/>
+<hr/>
+<br/><br/>
+
+{% include "menu_article.html.twig" %}
+
+</div>
+
+{% endblock %}
