l'affichage des formulaires

--- a/templates/article/affichage.html.twig
+++ b/templates/article/affichage.html.twig
@@ -18,18 +18,18 @@
 <th>titre</th>
 <th>contenu</th>
 <th>images</th>
-<th>résumé</th>
+<th>resume</th>
 <th>date</th>
 </tr>
 </thead>
 
 <tr>
-<td>{{ articles.id }}</td>
-<td>{{ articles.titre }}</td>
-<td>{{ articles.contenu }}</td>
-{# <td>{{ articles.image }}</td>  #}
-<td>{{ articles.resumé }}</td>
-<td>{{ articles.date|date("d/m/Y") }}</td>
+<td>{{ prod.id }}</td>
+<td>{{ prod.titre }}</td>
+<td>{{ prod.contenu }}</td>
+{# <td>{{ prod.image }}</td>  #}
+<td>{{ prod.resume }}</td>
+<td>{{ prod.date|date("d/m/Y") }}</td>
 </tr>
 </tbody>
 </table>
