--- a/templates/article/artnouveau.html.twig
+++ b/templates/article/artnouveau.html.twig
@@ -30,8 +30,8 @@
 <td>{{article.titre}}</td>
 <td>{{article.contenu}}</td>
 <td>{{article.date|date("d/m/Y")}}</td>
-<td>{{article.image}}</td>
-<td>{{article.action}}</td>
+{# <td>{{article.image}}</td> #}
+
 </tr>
 </tbody>
 </div>
