--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -30,6 +30,7 @@
 <td>{{categor.id }} </td>
 <td> {{categor.titre}} </td>
 <td>{{ categor.resume }} </td>
+<td> <a href="{{ path('nouvellecategorie')}}"> Ajouter une nouvelle catégorie </a> </td>
 </tr>       
 {% endfor %}
 </tbody>
