--- a/templates/article/livre.html.twig
+++ b/templates/article/livre.html.twig
@@ -38,9 +38,6 @@
 						</td>
 						<td>{{ article.contenu }}
 						</td>
-						<td>
-							<li><a href="{{ path('art_affichage', {'id':article.id})}}"> Lire mon action </a></li>
-						</td>
 					</tr>
 				{% else %}
 					<tr>
@@ -50,6 +47,11 @@
 				{% endfor %}}
 			</tbody>
 		</table>
+
+		<ul>
+		<li> <a href="{{ path('art_affichage',{'id': 'prod.id'}) }}"> Consulter un livre donné</a> </li>
+							<li> <a href="{{ path('article.nouvelarticle')}}"> Ajouter un nouveau livre </a> </li>				
+		</ul>
 
 	</div>
 </div>{% endblock %}
