--- a/templates/menu_article.html.twig
+++ b/templates/menu_article.html.twig
@@ -5,9 +5,9 @@
     <h3>
 		<li><a href="{{ path('livre') }}"> Livres </a></li>
         <li><a href="{{ path('categorie') }}"> Liste des Catégorie </a></li>
-          <li><a href="{{ path('art_affichage', {'id':'articles.id'}) }}"> Voir un livre précis </a></li>
+          <li><a href="{{ path('art_affichage', {'id':'prod.id'}) }}"> Voir un livre précis </a></li>
         <li><a href="{{ path('utilisateur') }}"> Voir les utilisateur </a></li>
-        <li><a href="{{ path('user_affichage', {'id':'utilisateurs.id'}) }}"> Voir un utilisateur précis </a></li>
+        <li><a href="{{ path('user_affichage', {'id':'abonner.id'}) }}"> Voir un utilisateur précis </a></li>
     </h3>
 </ul>
 <hr>
