--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -99,5 +99,10 @@
 			</tbody>
 		</table>
 
+<br/><br/>
+<ul>
+<li> <a href="{{ path('user_affichage',{'id':'abonner.id'})}}"> Voir un utilisateur donné </a></li>
+<li> <a href="{{ path('formutilisateur') }}"> Ajouter un utilisateur </a></li>
+</ul>
 	</div>
 {% endblock %}
