affichage correcte de toutes les pages sauf 2

--- a/templates/article/artnouveau.html.twig
+++ b/templates/article/artnouveau.html.twig
@@ -34,6 +34,11 @@
 
 </tr>
 </tbody>
+
+<ul>
+<li> <a href="{{ path('livre') }}"> Revenir à la page des livres </a> </li>
+<li> <a href="{{ path('demarrage') }}"> Revenir à la page d'accueil </a> </li>
+</ul>
 </div>
 
 {% endblock %}
