--- a/templates/article/affichage.html.twig
+++ b/templates/article/affichage.html.twig
@@ -24,13 +24,18 @@
 </thead>
 
 <tr>
-<td>{{ prod.id }}</td>
-<td>{{ prod.titre }}</td>
-<td>{{ prod.contenu }}</td>
-{# <td>{{ prod.image }}</td>  #}
-<td>{{ prod.resume }}</td>
-<td>{{ prod.date|date("d/m/Y") }}</td>
+<td>{{ articles.id }}</td>
+<td>{{ articles.titre }}</td>
+<td>{{ articles.contenu }}</td>
+<td>{{ articles.image }}</td>
+<td>{{ articles.resume }}</td>
+<td>{{ articles.date|date("d/m/Y") }}</td>
 </tr>
 </tbody>
 </table>
+
+<ul>
+<li> <a href="{{ path('livre') }}"> Revenir à la page des livres </a> </li>
+<li> <a href="{{ path('demarrage') }}"> Revenir à la page d'accueil </a> </li>
+</ul>
 {% endblock %}
