--- a/templates/location/index.html.twig
+++ b/templates/location/index.html.twig
@@ -19,7 +19,6 @@
 <tbody>
 <thead>
 <tr>
-<tr>
 <th> id </th>
 <th> Date </th>
 <th> Titre </th>
@@ -31,25 +30,19 @@
 <th> à la une </th>
 <th> image </th>
 </tr>
-{% for loc in location %}
+</thead>
+
+{% for location in locations %}
 <tr>
-<td> {{ loc.id }}</td>
-<td> {{ loc.date }}</td>
-<td> {{ loc.titre }}</td>
-<td> {{ loc.caterie }}</td>
-<td> {{ loc.description }}</td>
-<td> {{ loc.valeur }}</td>
-<td> {{ loc.adresse }}</td>
-<td> {{ loc.accessibility }}</td>
-<td> {{ loc.alaune }}</td>
-<td> {{ loc.image }}</td>
+<td> <a href="{{ path('location_id',{'id':location.id})}}"> Voir la location numéro {{ location.id }} </a></td>
 </tr>
+{% endfor %}
 </tbody>
 </table>
     
     <ul>
     <li> <a href="{{ path('locform')}}"> Enregistrer une nouvelle location </a> </li>    
-
+<li> <a href="{{ path('demarrage')}}"> Revenir à l'accueil </a> </li>    
     </ul>
 </div>
 {% endblock %}
