--- a/templates/utilisateur/nouvelutilisateur.html.twig
+++ b/templates/utilisateur/nouvelutilisateur.html.twig
@@ -12,13 +12,13 @@
 
 {{ form_start(userform)}}
 Nom : {{ form_widget(userform.nom) }} <br/>
-Prénom : {{ form_widget(userform.Prénom) } <br/>
+Prénom : {{ form_widget(userform.prenom) }} <br/>
 Date de naissance : {{ form_widget(userform.dateNaissance) }}<br/>
-Login : {{ form_widget(userform.Login) }}<br/>
+Login : {{ form_widget(userform.login) }}<br/>
 Mot de passe : {{ form_widget(userform.passWord) }} <br/>
-Adresse : {{ form_widget(userform.Adresse) }} <br/>
-Email : {{ form_widget(userform.Email) }} <br/>
-Photo : {{ form_widget(userform.Photo) }} <br/>
+Adresse : {{ form_widget(userform.adresse) }} <br/>
+Email : {{ form_widget(userform.email) }} <br/>
+Photo : {{ form_widget(userform.photo) }} <br/>
 Rôle : {{ form_widget(userform.role) }} <br/>
 <br/>
 
