Finition du CRUD

--- a/templates/categorie/cataffichage.html.twig
+++ b/templates/categorie/cataffichage.html.twig
@@ -1,10 +1,10 @@
 {% extends "base.html.twig" %}
 
-{% block title %} Affichage d'une catégorie choisie! {% endblock %}
+{% block title %} Affichage d'une catégorie donnée! {% endblock %}
 
 {% block body %}
 
-<h1> Nouvelle catégorie </h1>
+<h1> L'Affichage de la catégorie numéro {{ categor.id }} </h1>
 
 <br/><br/>
 <hr/>
