--- a/templates/utilisateur/affichageuser.html.twig
+++ b/templates/utilisateur/affichageuser.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 	<div>
 		<h1>
-			Nouvel utilisateur
+			Les données de l'utilisateur numéro {{ abonne.id }}
 		</h1>
 
 		<br/><br/>
