--- a/templates/article/livre.html.twig
+++ b/templates/article/livre.html.twig
@@ -29,7 +29,26 @@
 			<tbody>
 				{% for article in articles %}
 					{# https://twig.symfony.com/doc/3.x/tags/for.html #}
+
+					<thead>
 					<tr>
+					<th> id </th>
+					<th> Titre </th>
+					<th> Contenu </th>
+					<th> Date </th>
+					<th> Image </th>
+					<th> Résumé </th>
+					<th> Action </th>
+					</tr>
+					</thead>
+					<tr>
+					<td> {{ article.id }} </td>
+					<td> {{ article.titre }} </td>
+					<td> {{ article.contenu }} </td>
+					<td> {{ article.date|date("d/m/Y") }} </td>
+					<td> {{ article.image }} </td>
+					<td> {{ article.resume }} </td>
+
 						<td><a href="{{ path('article_id', {'id':article.id}) }}"> Voir les détail l'id n° {{article.id}} </a>
 						</td>
 					</tr>
