--- a/templates/location/index.html.twig
+++ b/templates/location/index.html.twig
@@ -1,22 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} La page des locations! {% endblock %}
+{% block title %}Bienvenu(e) à la page des locations!{% endblock %}
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    .contenu { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .contenu { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
-    
-    <h1>bienvenu(e) à la page des locations </h1>
+<div class="contenu">
+    <h1> Bienvenu(e) à la page des locations!✅</h1>
 <br/><br/>
 <hr/>
-<br/>
+<br/><br/>
 
 <table border="1">
 
+<tbody>
 <thead>
 <tr>
 <th> id </th>
@@ -32,10 +32,7 @@
 <th> Action </th>
 </tr>
 </thead>
-
-<tbody>
 {% for location in locations %}
-
 <tr>
 <td> {{ location.id }} </td>
 <td> {{ location.date|date("D/M/Y") }} </td>
@@ -47,15 +44,25 @@
 <td> {{ location.accessibility }} </td>
 <td> {{ location.alaune }} </td>
 <td> {{ location.image }} </td>
+
 <td> <a href="{{ path('location_id', {'id':location.id})}}"> Voir la location numéro {{ location.id }} </a></td>
 </tr>
+{% else %}
+					<tr>
+						<td colspan="5">Vous n'avez pas d'enregistrement!
+						</td>
+					</tr>
 {% endfor %}
+
 </tbody>
 </table>
     
+    </div>
+
+    <br/>
+
     <ul>
     <li> <a href="{{ path('locform')}}"> Enregistrer une nouvelle location </a> </li>    
 <li> <a href="{{ path('demarrage')}}"> Revenir à l'accueil </a> </li>    
     </ul>
-</div>
 {% endblock %}
