commit avant suppression et modification

--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -5,10 +5,10 @@
 {% block body %}
 
 <div>
-<h1> Vous êtes sur le site de GUINOT! </h1>
+<h1> Vous êtes sur le site de la bibliothèque de GUINOT! </h1>
 
 <br/><br/>
-<hr/>
+<hr/><hr/>
 <br/><br/>
 
 {% include "menu_article.html.twig" %}
