--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -24,6 +24,7 @@
 <th> titre </th>
 <th> resume </th>
 <th> Action </th>
+<th> Supprimer </th>
 </tr>
 </thead>
 
@@ -32,7 +33,8 @@
 <td> {{ categorie.id}} </td>
 <td> {{ categorie.titre}} </td>
 <td> {{ categorie.resume}} </td>
-<td><a href="{{ path('cat_id', {'id':categorie.id }) }}"> Voir les détail l'id n° {{categorie.id}} </a></td>
+<td><a href="{{ path('edit_categorie', {'id':categorie.id }) }}"> Modifier l'id n° {{categorie.id}} </a></td>
+<td><a href="{{ path('del_categorie', {'id':categorie.id }) }}"> supprimer la catégorie de l'id n° {{categorie.id}} </a></td>
 </tr>
 {% endfor %}
 </tbody>
@@ -41,6 +43,7 @@
 <br/><br/>
 
 <ul>
+<li> <a href="{{ path('fcategorie')}}"> Ajouter une nouvelle catégorie </a> </li>
 <li> <a href="{{ path('fcategorie')}}"> Ajouter une nouvelle catégorie </a> </li>
 <li> <a href="{{ path('demarrage')}}"> Revenir à la page d'accueil </a> </li>
 </ul>
