--- a/templates/categorie/catform.html.twig
+++ b/templates/categorie/catform.html.twig
@@ -1,19 +1,24 @@
 {% extends "base.html.twig" %}
 
-{% block title %} Bienvenu(e) à la page de formulaire d'une nouvelle catégorie {% endblock %}
+{% block title %} Modification d'une catégorie! {% endblock %}
 
 {% block body %}
 
-<h1> Prenez le soin de bien le remplir! </h1>
+<h1> Modification d'une catégorie </h1>
 
 <br/><br/>
 <hr/>
+<br/><br/>
+
+<div>
+Faites vos Modifications souhaitées puis cliquez sur le bouton "modifier"
+</div>
 <br/><br/>
 
 {{ form_start(formedit)}}
 Titre : {{ form_widget(formedit.titre)}} <br/>
 Résumé : {{ form_widget(formedit.resume)}} <br/>
 
-<button type="submit" class="btn btn-success"> Valider le formulaire </button>
+<button type="submit" class="btn btn-success"> Modifier </button>
 {{ form_end(formedit) }}
 {% endblock %}
