--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -21,20 +21,21 @@
 <thead>
 <tr>
 <th> id </th>
-<th> titre </th>
-<th> resume </th>
-<th> Action </th>
+<th> Titre </th>
+<th> Résumé </th>
+<th> Modifier </th>
 <th> Supprimer </th>
 </tr>
 </thead>
+
 
 {% for categorie in categories %}
 <tr>
 <td> {{ categorie.id}} </td>
 <td> {{ categorie.titre}} </td>
 <td> {{ categorie.resume}} </td>
-<td><a href="{{ path('edit_categorie', {'id':categorie.id }) }}"> Modifier l'id n° {{categorie.id}} </a></td>
-<td><a href="{{ path('del_categorie', {'id':categorie.id }) }}"> supprimer la catégorie de l'id n° {{categorie.id}} </a></td>
+<td><a href="{{ path('edit_categorie', {'id':categorie.id }) }}"> Modifier cette catégorie </a></td>
+<td><a href="{{ path('del_categorie', {'id':categorie.id }) }}"> supprimer cette catégorie </a></td>
 </tr>
 {% endfor %}
 </tbody>
@@ -43,7 +44,6 @@
 <br/><br/>
 
 <ul>
-<li> <a href="{{ path('fcategorie')}}"> Ajouter une nouvelle catégorie </a> </li>
 <li> <a href="{{ path('fcategorie')}}"> Ajouter une nouvelle catégorie </a> </li>
 <li> <a href="{{ path('demarrage')}}"> Revenir à la page d'accueil </a> </li>
 </ul>
