--- a/templates/categorie/catformulaire.html.twig
+++ b/templates/categorie/catformulaire.html.twig
@@ -10,10 +10,11 @@
 <hr/>
 <br/><br/>
 
-{{ form_start(Catform)}}
-Titre : {{ form_widget(Catform.titre)}} <br/>
-Résumé : {{ form_widget(Catform.resume)}} <br/>
+{{ form(Catform)}}
 
-<button type="submit" class="btn btn-success"> Valider le formulaire </button>
-{{ form_end(Catform) }}
+
+
+
+
+
 {% endblock %}
