--- a/templates/utilisateur/nouvelutilisateur.html.twig
+++ b/templates/utilisateur/nouvelutilisateur.html.twig
@@ -10,18 +10,18 @@
 <hr/>
 <br/<br/>
 
-{{ form_start(userform)}}
-Nom : {{ form_widget(userform.nom) }} <br/>
-Prénom : {{ form_widget(userform.prenom) }} <br/>
-Date de naissance : {{ form_widget(userform.dateNaissance) }}<br/>
-Login : {{ form_widget(userform.login) }}<br/>
-Mot de passe : {{ form_widget(userform.passWord) }} <br/>
-Adresse : {{ form_widget(userform.adresse) }} <br/>
-Email : {{ form_widget(userform.email) }} <br/>
-Photo : {{ form_widget(userform.photo) }} <br/>
-Rôle : {{ form_widget(userform.role) }} <br/>
+{{ form(userform)}}
+
+
+
+
+
+
+
+
+
 <br/>
 
-<button tupe="sumit" class="btn btn-success"> Valider le formulaire </button>
-{{ form_end(userform ) }}
+
+
 {% endblock %}
