--- a/templates/article/livre.html.twig
+++ b/templates/article/livre.html.twig
@@ -51,9 +51,8 @@
 					<td> {{ article.date|date("d/m/Y") }} </td>
 					<td> {{ article.image }} </td>
 					<td> {{ article.resume }} </td>
-
-						<td><a href="{{ path('edit_modifier', {'id': article.id}) }}"> Modifier l'article n° {{article.id}} </a>
-						</td>
+					<td><a href="{{ path('article_id', {'id': article.id}) }}"> Afficher l'article n° {{article.id}} </a></td>
+						<td><a href="{{ path('edit_modifier', {'id': article.id}) }}"> Modifier l'article n° {{article.id}} </a></td>
 												<td><a href="{{ path('del_article', {'id': article.id}) }}"> Supprimer l'article n° {{article.id}} </a></td>
 					</tr>
 				{% else %}
