--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -23,6 +23,7 @@
 <th> id </th>
 <th> Titre </th>
 <th> Résumé </th>
+<th> Action </th>
 <th> Modifier </th>
 <th> Supprimer </th>
 </tr>
@@ -34,6 +35,7 @@
 <td> {{ categorie.id}} </td>
 <td> {{ categorie.titre}} </td>
 <td> {{ categorie.resume}} </td>
+<td><a href="{{ path('cat_id', {'id':categorie.id }) }}"> Afficher cette catégorie </a></td>
 <td><a href="{{ path('edit_categorie', {'id':categorie.id }) }}"> Modifier cette catégorie </a></td>
 <td><a href="{{ path('del_categorie', {'id':categorie.id }) }}"> supprimer cette catégorie </a></td>
 </tr>
