--- a/templates/article/article_edit.html.twig
+++ b/templates/article/article_edit.html.twig
@@ -1,5 +1,6 @@
 {% extends "base.html.twig" %}
 
+{% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %}
 {% block title %} modification d'un article! {% endblock %}
 
 {% block body %}
