--- a/templates/categorie/catformulaire.html.twig
+++ b/templates/categorie/catformulaire.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
 
+{% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %}
+
 {% block title %} Bienvenu(e) à la page de formulaire d'une nouvelle catégorie {% endblock %}
 
 {% block body %}
