--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,5 +1,6 @@
 {% extends "base.html.twig" %}
 
+{% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %}
 {% block title %} Bienvenu(e) au site de la bibliothèque de GUINOT {% endblock %}
 
 {% block body %}
