--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %}
+
 {% block title %}
 	Gestion des utilisateurs!
 {% endblock %}
