--- a/templates/utilisateur/modif_utilisateur.html.twig
+++ b/templates/utilisateur/modif_utilisateur.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
 
+{% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %}
+
 {% block title %} Modification d'un utilisateur {% endblock %}
 
 {% block body %}
