--- a/templates/utilisateur/nouvelutilisateur.html.twig
+++ b/templates/utilisateur/nouvelutilisateur.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
 
+{% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %}
+
 {% block title %} l'enregistrement d'un nouvel utilisateur {% endblock %}
 
 {% block body %}
