début des relations entre les entities

--- a/templates/article/new2.html.twig
+++ b/templates/article/new2.html.twig
@@ -1,6 +1,7 @@
 {% extends "base.html.twig" %}
 
-{% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %}
+{# {% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %} #}
+
 {% block title %} nouvelle article {% endblock %}
 
 {% block body %}
