--- a/templates/categorie/nouvellecategorie.html.twig
+++ b/templates/categorie/nouvellecategorie.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %}
+{# {% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %} #}
 
 {% block title %} Ajout d'une nouvelle catégorie! {% endblock %}
 
