--- a/templates/article/affichage.html.twig
+++ b/templates/article/affichage.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %}
+{# {% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %} #}
 {% block title %} Affichage d'un article! {% endblock %}
 
 {% block body %}
