--- a/templates/article/livre.html.twig
+++ b/templates/article/livre.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %}
+{# {% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %} #}
+
 {% block title %} Gestion des livres! {% endblock %}
 
 {% block body %}
@@ -39,7 +40,10 @@
 					<th> Date </th>
 					<th> Image </th>
 					<th> Résumé </th>
+					<th> Catégorie </th>
 					<th> Action </th>
+					<th> Modifier </th>
+					<th> Supprimer </th>
 					</tr>
 					</thead>
 
@@ -52,6 +56,7 @@
 					<td> {{ article.date|date("d/m/Y") }} </td>
 					<td> {{ article.image }} </td>
 					<td> {{ article.resume }} </td>
+					<td> {{ article.categorie.titre }} </td>
 					<td><a href="{{ path('article_id', {'id': article.id}) }}"> Afficher l'article n° {{article.id}} </a></td>
 						<td><a href="{{ path('edit_modifier', {'id': article.id}) }}"> Modifier l'article n° {{article.id}} </a></td>
 												<td><a href="{{ path('del_article', {'id': article.id}) }}"> Supprimer l'article n° {{article.id}} </a></td>
