--- a/templates/article/livreformulaire.html.twig
+++ b/templates/article/livreformulaire.html.twig
@@ -1,6 +1,7 @@
 {% extends "base.html.twig" %}
 
-{% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %}
+{# {% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %} #}
+
 {% block title %} formulaire à saisir {% endblock %}
 
 {% block body %}
