--- a/templates/categorie/cataffichage.html.twig
+++ b/templates/categorie/cataffichage.html.twig
@@ -1,6 +1,7 @@
 {% extends "base.html.twig" %}
 
-{% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %}
+{# {% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %} #}
+
 {% block title %} Affichage d'une catégorie donnée! {% endblock %}
 
 {% block body %}
