--- a/templates/utilisateur/affichageuser.html.twig
+++ b/templates/utilisateur/affichageuser.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %}
+{# {% form_theme formCreateArt 'bootstrap_4_layout.html.twig' %} #}
 
 {% block title %}
 	L'affichage des données d'un utilisateur
