--- a/templates/categorie/cataffichage.html.twig
+++ b/templates/categorie/cataffichage.html.twig
@@ -19,6 +19,7 @@
 <th>id</th>
 <th>titre</th>
 <th>résumé</th>
+<th>Article</th>
 </tr>
 </thead>
 
@@ -26,6 +27,10 @@
 <td>{{ categor.id }}</td>
 <td>{{ categor.titre }}</td>
 <td>{{ categor.resume }}</td>
+<td>{% for article in categor.articles %}
+{{ article.titre }}
+{% endfor %}
+</td>
 </tr>
 </tbody>
 </table>
