--- a/templates/menu_article.html.twig
+++ b/templates/menu_article.html.twig
@@ -5,6 +5,7 @@
 <ul class="dropdown-menu">
     
 		<li><a href="{{ path('livre') }}"> Livres </a></li>
+        <li><a href="{{ path('index_auteur') }}"> La liste des auteurs </a></li>
         <li><a href="{{ path('categorie') }}"> Liste des Catégorie </a></li>
         <li><a href="{{ path('location') }}"> Aller à la page des locations </a></li>
         <li><a href="{{ path('utilisateur') }}"> Voir les utilisateur </a></li>
