--- a/templates/article/livre.html.twig
+++ b/templates/article/livre.html.twig
@@ -66,7 +66,7 @@
 						<td colspan="5">Vous n'avez pas d'enregistrement!
 						</td>
 					</tr>
-				{% endfor %}}
+				{% endfor %}
 			</tbody>
 		</table>
 
