--- a/templates/auteur/index.html.twig
+++ b/templates/auteur/index.html.twig
@@ -1,20 +1,97 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AuteurController!{% endblock %}
+{% block title %}
+	Liste des auteurs!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 800px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
+		.example-wrapper code {
+			background: #F5F5F5;
+			padding: 2px 6px;
+		}
+	</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<div class="example-wrapper">
+		<h1>liste des auteurs✅</h1>
+		<br/><br/>
+		<hr/>
+		<br/>
+		<table border="1">
+			<thead>
+				<tr>
+					<th>
+						id
+					</th>
+					<th>
+						Nom
+					</th>
+					<th>
+						Prénom
+					</th>
+					<th>
+						Email
+					</th>
+					<th>
+						Article
+					</th>
+					<th>
+						Action
+					</th>
+				</tr>
+			</thead>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/modou/Symfony/test1/src/Controller/AuteurController.php'|file_link(0) }}">src/Controller/AuteurController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/modou/Symfony/test1/templates/auteur/index.html.twig'|file_link(0) }}">templates/auteur/index.html.twig</a></code></li>
-    </ul>
-</div>
+			<tbody>
+				{% for auteur in auteurs %}
+					<tr>
+						<td>
+							{{auteur.id}}
+						</td>
+						<td>
+							{{auteur.nom}}
+						</td>
+						<td>
+							{{auteur.prenom}}
+						</td>
+						<td>
+							{{auteur.email}}
+						</td>
+						<td>
+							{% for article in articles %}
+								{{article.auteur}}
+							{% endfor %}
+						</td>
+						<td>
+							<a href="{{ path('auteur_id', {'id': article.id}) }}">
+								Afficher l'auteur n°
+								{{auteur.id}}
+							</a>
+						</td>
+					</tr>
+
+				{% endfor %}
+			</tbody>
+		</table>
+
+		<ul>
+			{# <li> <a href="{{ path('edit_modifier') }}"> Modifier un article</a> </li> #}
+			{# <li><a href="{{ path('art_affichage',{'id': 'prod.id'}) }}">Consulter un livre donné</a></li> #}
+			{# <li><a href="{{ path('article.nouvelarticle')}}">Ajouter un nouveau livre</a></li> #}
+				<li><a href="{{ path('formulaire')}}"> Ajouter un nouvel auteur</a>
+			</li>
+			<li>
+				<a href="{{ path('demarrage') }}">
+					Revenir à la page d'accueil
+				</a>
+			</li>
+
+
+		</ul>
+	</div>
 {% endblock %}
