--- a/templates/article/affichage.html.twig
+++ b/templates/article/affichage.html.twig
@@ -35,6 +35,39 @@
 </tbody>
 </table>
 
+<br/><br/>
+
+<h1> Les auteurs de cet article </h1>
+<br/>
+<ul>
+<li> {{ auteurs.nom }} </li>
+</ul>
+
+<br/><br/>
+
+<h1> liste des commentaires </h1>
+<br/>
+
+{% for commentaire in article.commentaire %}
+<p>
+date : {{commentaires.date|date("d/m/Y") }} <br/>
+{{ commentaires.commentaire }}
+</p>    
+{% endfor %}
+
+<br/><br/>
+
+<h1> Laissez un commentaire si vous le souhaitez ! </h1>
+
+<br/>
+
+<hr/>
+<br/>
+
+{{ form(formcommentaire) )}}
+
+<br/><br/>
+
 <ul>
 <li> <a href="{{ path('livre') }}"> Revenir à la page des livres </a> </li>
 <li> <a href="{{ path('demarrage') }}"> Revenir à la page d'accueil </a> </li>
